--- a/DEMO/video.html
+++ b/DEMO/video.html
@@ -28,8 +28,8 @@
 		  <li class="nav-item">
 		    <a class="nav-link active text-white" href="video.html"><h4>介紹影片</h4></a>
 		  </li>
-		  <li class="nav-item">
-	  	    <a class="nav-link text-white" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false"><h4>通識活動</h4></a>
+		  <li class="nav-item dropdown">
+		    <a class="nav-link text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><h4>通識活動</h4></a>
 		    <div class="dropdown-menu">
 		      <a class="dropdown-item" href="show.html">表演時間表</a>
 		      <a class="dropdown-item" href="music.html">音樂會時間表</a>
