--- a/DEMO/video.html
+++ b/DEMO/video.html
@@ -13,6 +13,11 @@
 
 	<!-- 自己寫的CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
+	<style>
+		.center{
+		  text-align:center;
+		}
+	</style>
 </head>
 
 <body>
@@ -48,10 +53,11 @@
 
 	<!-- 內容 -->
 	<section>
-		<div class="container">
+		<div class="container center">
+			<h3>介紹影片</h3>
 			<iframe src="https://www.youtube.com/embed/UHRfARTK9z4" width="800" height="500"></iframe>
 			<br>
-			<h4>以第一鏡頭的方式來拍攝，首先是AB同學看到活動中心大排長龍的，就好奇地去詢問是有什麼活動，一問之下才發現原來中原有這麼多有趣的通識活動給學生參加，影片裡也介紹了如何查看通識活動。</h4>
+			<h4>影片內容簡介：以第一鏡頭的方式來拍攝，首先是AB同學看到活動中心大排長龍的，就好奇地去詢問是有什麼活動，一問之下才發現原來中原有這麼多有趣的通識活動給學生參加，影片裡也介紹了如何查看通識活動。</h4>
 		</div>
 	</section>
 
