--- a/myweb/index.html
+++ b/myweb/index.html
@@ -15,7 +15,7 @@
             font-family: 微軟正黑體;
             margin:0px;
             padding:0px;
-            background: url(1.jpg) center center fixed no-repeat;
+            background: url(img/1.jpg) center center fixed no-repeat;
             background-size: cover;
         }      
         .navBgColor{
